# textructured-hash

./: .gitignore  EXPERIMENT_COMPARISON.md  EXPERIMENT_PATTERN_FREE.md  EXPERIMENT_PLAN_V2.md  EXPERIMENT_V2_RESULTS.md  FAILURE_ANALYSIS.md  README.md  REASERCH_GOAL.md  claude.md  requirements.txt
clipboard-manager/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clipboard-manager/src/: main.ts  style.css
clipboard-manager/src-tauri/: Cargo.toml  tauri.conf.json
clipboard-manager/src-tauri/src/: clipboard.rs  encoder.rs  main.rs
data/: pairs.jsonl  synthetic.jsonl  test.jsonl  train.jsonl  val.jsonl
legacy/: README.md  RESEARCH_PROTOCOL.md
legacy/scripts/: evaluate.py  experiment_dimension_sweep.py  split_dataset.py
legacy/src/: __init__.py
results/: FINAL_REPORT.md
results/baseline_minhash/: config.yaml  report.md
results/baseline_random_projection/: config.yaml
results/baseline_simhash/: config.yaml  report.md
results/baseline_tfidf_svd/: config.yaml  metrics.json  report.md
results/exp1_1_ngram_hash/: config.yaml
results/exp1_1_ngram_hash_multiscale/: metrics.json  report.md
results/exp1_2_structure_type/: metrics.json
results/exp2_1_structure_type_fast/: metrics.json
results/exp2_2_structure_type_quantized_128/: report.md
results/exp2_2_structure_type_quantized_256/: config.yaml
results/experiment_dimension_sweep/: EXPERIMENT_DIMENSION_SWEEP.md  dimension_sweep_results.json
scripts/: evaluate.py  generate_comparison_report.py  generate_data.py  generate_pairs.py
src/data/: __init__.py  (+1 more)
(+49 files in other folders)
