[package]
name = "clipboard-manager"
version = "1.0.0"
description = "Smart clipboard manager with text structure clustering"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1.19"
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
arboard = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
